...

          Text(
              text = "$quizTitle Quiz",
              color = Color.White,
              fontWeight = FontWeight.Bold,
              fontSize = 30.sp,
              modifier = Modifier.padding(vertical = 8.dp).testTag("quiz_title"),
              textAlign = TextAlign.Center)

          Spacer(modifier = Modifier.height(20.dp))

          if (!showScore) {
            quizQuestions.getOrNull(currentQuestionIndex)?.let { question ->
...
          } else {
            Text(
                text = "Your score: $score/${quizQuestions.size}",
                color = Color.White,
                fontSize = 28.sp,
                fontWeight = FontWeight.Bold,
                modifier = Modifier.testTag("score_text"))

            Box(modifier = Modifier.height(550.dp).fillMaxWidth()) {
              QuizRecap(viewModel.getQuestions(), viewModel.getUserAnswers())

              Box(
                  modifier =
...
